flux/apps/falco/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: falcosidekick-ui
    namespace: system-addon
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:ASG7bZGYW25/VaVPh34EsawL9kV6igkBLU+UD5EK5QFqg/Vkg/k=,iv:N2vZXj3dxxlPorKvGAHyn/DC8Q6Gd4gy2SxYZyva8X4=,tag:8IZTANjruX5U5eiankxdmQ==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: falcosidekick-ui
              port: 2802
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtWUJWbi8xV3FVZ3RiYXNn
[...]
            O2+rU7Tx0PFjIiY3DBTPPP9BIH6t07tn+XVCfOTe7vyIfAGfyQEYzg==
            -----END AGE ENCRYPTED FILE-----
          recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
    encrypted_regex: hostnames|0
    lastmodified: "2026-09-18T19:10:51Z"
    mac: ENC[AES256_GCM,data:FmjZOZOAlIRtevsaZSiUMfy2n015bkJqUnsKhRS+zaakKUXEBavk54tK21qBoGTEXbfE8R+klh7AwPJhII1YXdFdo3OCyvrbXkj1vXVvQd83XqCGz530DJxzfdcpPnGkjOvIZh89a+bIRW7/ihkjtcIEZp/PHk1kbC8Maz9yftU=,iv:3Ge5srEyjrXb0DPJ5rK1URX+tvyhelZed3/n1SuwyX0=,tag:22MHM8JetKL439+/LSv5PA==,type:str]
    version: 3.13.3
